<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">다바른 농부용</string>
    <string name="hello_world">로딩중입니다</string>
    <string name="action_settings">Settings</string>
    <string name="null_text">없음</string>
    <string name="dolist_position">밭-구획</string>
    <string name="dolist_request">요청</string>
    <string name="dolist_name">사용자</string>
    <string name="dolist_crop">작물</string>
    <string name="title_activity_to_do_detail">ToDoDetailActivity</string>
    <string name="title_activity_chat">메세지</string>
    <string name="dodetail_poscrop">1-2 배추</string>
    <string name="dodetail_name">홍길동</string>
    <string name="dodetail_btnconfirm">물을 주었습니다!</string>
    <string name="dodetail_btncancel">물을 줄 때가 아닙니다</string>
    <!-- title of each tab -->
    <string name="title_activity_tab">다바른 농부용</string>
    <string name="title_section1">할 일</string>
    <string name="title_section2">밭 보기</string>
    <string name="title_section3">메세지</string>
    <!-- text of LogFragment -->
    <string name="text_position">밭-구획</string>
    <string name="text_crop">작물</string>
    <string name="text_requested">요청됨</string>
    <string name="text_completed">완료됨</string>
    <string name="text_request">요청</string>
    <string name="text_name">사용자</string>
    <string name="button_text_water">물주기</string>
    <string name="button_text_fertil">거름주기</string>
    <string name="button_text_select">작물선택</string>
    <string name="button_text_levelup">레벨업</string>
    <string name="button_text_harvest">수확하기</string>

    <!-- camera -->
    <string name="take_photo">Take a Photo</string>
    <string name="upload_server">Upload</string>
    <string name="uploaded">Successfully uploaded</string>
    <string name="button_text_take_photo">사진촬영</string>
    <string name="title_activity_detail_log">DetailLogActivity</string>
    <string name="title_activity_main_activity12">MainActivity12</string>
    <string name="title_activity_main_activity433">MainActivity433</string>

</resources>
