<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
       <TextView
        android:id="@+id/dolist_pos"
        android:layout_width="90dip"
        android:layout_height="30dip"
        android:layout_alignBottom="@+id/dolist_crop"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/dolist_position"
        android:textSize="12pt" />
       
   	<TextView
   	    android:id="@+id/dolist_crop"
   	    android:layout_toRightOf="@id/dolist_pos"
        android:layout_width="70dip"
        android:layout_height="30dip"
        android:text="@string/dolist_crop"
        android:textSize="13pt"
        android:gravity="center"
    />
   	<TextView
		android:id="@+id/dolist_request"
   	    android:layout_toRightOf="@id/dolist_crop"
        android:layout_width="120dip"
        android:layout_height="30dip"
        android:text="@string/dolist_request"
        android:textSize="13pt"
        android:gravity="center" 
    />
   	<TextView
   	    android:id="@+id/dolist_name"
   	    android:layout_toRightOf="@id/dolist_request"
        android:layout_width="80dip"
        android:layout_height="30dip"
        android:text="@string/dolist_name"
        android:textSize="13pt"
        android:gravity="center"
 
    />
   	<ListView
   	    android:id="@+id/todolist"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentLeft="true"
   	    android:layout_below="@id/dolist_name"
   	    android:dividerHeight="1dip"
   	    android:divider="#dddddd"
   	    android:gravity="center" >
 
    </ListView>
</RelativeLayout>